--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-country-region-selector": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.19",
     "react-redux": "^7.2.6",
@@ -19,6 +20,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
+    "stripe": "^8.213.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
