--- a/functions/package.json
+++ b/functions/package.json
@@ -17,11 +17,13 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.20.0",
+    "stripe": "^8.215.0"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-promise": "^6.0.0",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true
