--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,10 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.26.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "fetch": "^1.1.0",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.20.0",
     "stripe": "^8.215.0"
