--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "firebase": "^9.6.10",
+    "gsap": "^3.10.3",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-country-region-selector": "^3.4.0",
